# pivot-to-python

./: CaseStudy.ipynb  LICENSE  Part_2.ipynb  Part_3.ipynb  README.md  README.rst  Untitled.ipynb  collatz_1.ipynb  compute_1.ipynb  engine.csv  my_demo.py  pyproject.toml  series_2.csv  series_3.csv  series_4.csv  venvtree.py
docs/: images.uml
notebooks/: CaseStudy.ipynb  Part_2.ipynb  Part_3.ipynb  Untitled.ipynb  collatz_1.ipynb  compute_1.ipynb
src/pivot_to_python/: __init__.py  ch08.py
tests/: test_ch08.py
